// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`cva > base 1`] = `
"import { cva, type VariantProps } from "class-variance-authority";
const index = cva(["font-semibold", "border", "rounded"], {
  variants: {
    "intent": {
      "primary": ["bg-blue-500", "text-white", "border-transparent", "hover:bg-blue-600"],
      "secondary": ["bg-white", "text-gray-800", "border-gray-400", "hover:bg-gray-100"]
    },
    "size": {
      "small": ["text-sm", "py-1", "px-2"],
      "medium": ["text-base", "py-2", "px-4"]
    }
  },
  compoundVariants: [{
    "intent": ["primary"],
    "size": ["medium"],
    "class": ["uppercase"]
  }],
  defaultVariants: {
    "intent": "primary",
    "size": "medium"
  }
});
export type Props = VariantProps<typeof index>;
export default index;"
`;

exports[`cva > base 2`] = `
"import { cva } from "@icestack/cva";
const index = cva(["font-semibold", "border", "rounded"], {
  variants: {
    "intent": {
      "primary": ["bg-blue-500", "text-white", "border-transparent", "hover:bg-blue-600"],
      "secondary": ["bg-white", "text-gray-800", "border-gray-400", "hover:bg-gray-100"]
    },
    "size": {
      "small": ["text-sm", "py-1", "px-2"],
      "medium": ["text-base", "py-2", "px-4"]
    }
  },
  compoundVariants: [{
    "intent": ["primary"],
    "size": ["medium"],
    "class": ["uppercase"]
  }],
  defaultVariants: {
    "intent": "primary",
    "size": "medium"
  }
});
export default index;"
`;

exports[`cva > base 3`] = `
"import { cva, type VariantProps } from "class-variance-authority";
const index = cva(["font-semibold", "border", "rounded"], {
  variants: {
    "intent": {
      "primary": ["bg-blue-500", "text-white", "border-transparent", "hover:bg-blue-600"],
      "secondary": ["bg-white", "text-gray-800", "border-gray-400", "hover:bg-gray-100"]
    },
    "size": {
      "small": ["text-sm", "py-1", "px-2"],
      "medium": ["text-base", "py-2", "px-4"]
    }
  },
  compoundVariants: [{
    "intent": ["primary"],
    "size": ["medium"],
    "class": ["uppercase"]
  }],
  defaultVariants: {
    "intent": "primary",
    "size": "medium"
  }
});
export type Props = VariantProps<typeof index>;
export default index;"
`;
